--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,16 @@ environment:
   sdk: '>=1.20.1 <2.0.0'
 
 dependencies:
-   html: ^0.13.0
+  build: ^0.12.0
+
+  html: ^0.13.0
+  git_version:
+    path: ../..
+
+  logging: '>=0.11.3 <1.0.0'
+  console_log_handler: '>=0.5.0 <1.0.0'
+    # git: git@github.com:MikeMitterer/dart-console_log_handler.git
+    # path: /Volumes/Daten/DevLocal/DevDart/ConsoleLogHandler
 
 dev_dependencies:
 
