--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,13 @@ dependencies:
     path: ../..
 
   logging: '>=0.11.3 <1.0.0'
-  console_log_handler: '>=0.5.0 <1.0.0'
+  console_log_handler: ^1.0.0
     # git: git@github.com:MikeMitterer/dart-console_log_handler.git
     # path: /Volumes/Daten/DevLocal/DevDart/ConsoleLogHandler
 
+
 dev_dependencies:
 
-  build_runner: ^0.8.0
+  build_runner: ^0.9.0
   build_test: ^0.10.0
   build_web_compilers: ^0.4.0
